--- a/_pages/2021.md
+++ b/_pages/2021.md
@@ -6,4 +6,4 @@ description:
 nav: false
 ---
 
-In 2021, IICCSSS took place as a one-day online event. The [keynote recordings](https://www.youtube.com/playlist?list=PLrQj_shmS8SPU4Np4FC1wccO0ddpGv6ni) can be viewed on our YouTube channel. The abstracts of the contributed lightning talks can be viewed [here](/assets/pdf/IICCSSS2021_AbstractBook.pdf).
+In 2021, IICCSSS took place as a one-day online event. The [keynote recordings](https://www.youtube.com/playlist?list=PLrQj_shmS8SPU4Np4FC1wccO0ddpGv6ni) are available to watch on our YouTube channel. The abstracts of the contributed lightning talks can be viewed [here](/assets/pdf/IICCSSS2021_AbstractBook.pdf).
