Update entire history

--- a/_pages/2019.md
+++ b/_pages/2019.md
@@ -5,5 +5,19 @@ title: IICCSSS 2019
 description: 
 nav: false
 ---
+The inaugural IICCSSS took place in 2019 in Freiburg, Germany 😊
 
-The inaugural IICCSSS took place in 2019 in Freiburg, Germany.
+**Location:** In-person only at Bernstein Center Freiburg (BCF)  
+**Date:** March 25 - 31, 2019  
+**Attendees:** 117 registrations and nearly 80 attendees! 🎉  
+**ECTS:** 2   
+**Format:** Lectures, workshops, contributed (blitz) talks, hackathon    
+
+**Topics:**   
+- _Bayesian Models of Cognition_ 🧠
+    - Frank Jäkel, Peggy Series, Falk Lieder, Lilian Weber
+- _Neural Networks in Cognitive Neuroscience_ 🤖
+    - Stefan Rotter, Arvind Kumar, Radoslaw Cichy, Jose Guzman, Timo Flesch, Sebastian Spreizer
+- _Signal Processing of Neural Data_ 🔊
+    - Ulrich Egert, Tonio Ball, Pierre LeVan, Michael Tangermann, Benedikt Ehinger  
+
