--- a/_pages/2021.md
+++ b/_pages/2021.md
@@ -6,4 +6,15 @@ description:
 nav: false
 ---
 
-In 2021, IICCSSS took place as a one-day online event. The [keynote recordings](https://www.youtube.com/playlist?list=PLrQj_shmS8SPU4Np4FC1wccO0ddpGv6ni) are available to watch on our YouTube channel. The abstracts of the contributed lightning talks can be viewed [here](/assets/pdf/IICCSSS2021_AbstractBook.pdf).
+The second IICCSSS took place amidst the COVID-19 pandemic in 2021 🌐
+
+**Location:** Virtual only 🖥️  
+**Date:** August 6, 2021  
+**Attendees:** 104 registrations! 🎉  
+**ECTS:** --
+**Format:** Lectures, panel discussions, and contributed (blitz) talks 🗣️  
+**Speakers:** Gemma Roig, Fabian Sinz, Anne Urai, Katharina Dobs, Eric Schulz,  Charlotte Rae, Nenad Tomasev
+
+**Material:**  
+- 🎥 [Keynote recordings](https://www.youtube.com/playlist?list=PLrQj_shmS8SPU4Np4FC1wccO0ddpGv6ni) on our YouTube channel.
+- 📄 [Abstracts of the contributed lightning talks](/assets/pdf/IICCSSS2021_AbstractBook.pdf)
