Update the layout of the 2023 page

--- a/_pages/2023.md
+++ b/_pages/2023.md
@@ -2,25 +2,66 @@
 layout: page
 permalink: /2023/
 title: IICCSSS 2023
-description: 
+description: The fourth IICCSSS, just like the one in 2022, was held for an entire week in Tübingen, Germany
 nav: false
 ---
-The fourth IICCSSS, just like the one in 2022, was held for an entire week in Tübingen, Germany 😊
 
-**Location:** In-person event at the University of Tübingen 🏛️  
-**Date:** September 11 - 15, 2023  
-**Attendees:** 147 registrations with ca. 100 attendees in person! 🎉  
+
+**Location:** In-person event at the University of Tübingen  
+**Date:** September 11–15, 2023  
+**Attendees:** Over 60 attendees  
 **ECTS:** 2  
-**Format:** Lectures, blitz talks, hackathon, and a panel discussion 📚  
+**Format:** Lectures, lightning talks, hackathon, and a panel discussion
 
-**Topics:**  
-- _Cognitive Modelling_ 🧠  
-    - Speakers: Peter Dayan, John Jairo Madrid Carvajal, Maria Eckstein
-- _Language_ 🗣️  
-    - Speakers: Jan Kirchner, Marcel Binz, Andrew Lampinen, Jennifer Hu, Noah Goodman
-- _Applied Machine Learning_ 💻  
-    - Speaker: Nicole Ludwig
-- _Panel on AI Governance_ 🏛️  
-    - Panelists: Eric Schulz, Nora Freya Lindemann, Rebecca Beiter, Annete Leßmöllmann, Kristof Meding
 
-Exciting discussions and breakthrough ideas marked the event, setting a new milestone for IICCSSS 2023! 🚀
+### Speakers
+
+<div class="projects">
+  <div class="container">
+      <div class="row row-cols-1 row-cols-md-4">
+      {% include speakers.liquid name="Marcel Binz" affiliation="MPI for Biological Cybernetics" url="https://marcelbinz.github.io" img="assets/img/speakers/2023/MarcelBinz.jpg" %}
+      {% include speakers.liquid name="Peter Dayan" affiliation="MPI for Biological Cybernetics" url="https://www.mpg.de/12309370/biological-cybernetics-dayan" img="assets/img/speakers/2023/PeterDayan.jpg" %}
+      {% include speakers.liquid name="Maria Eckstein" affiliation="Google DeepMind" url="https://mariaeckstein.com" img="assets/img/speakers/2023/MariaEckstein.jpg" %}
+      {% include speakers.liquid name="Jennifer Hu" affiliation="MIT" url="https://jennhu.github.io" img="assets/img/speakers/2023/JenniferHu.jpg" %}
+      {% include speakers.liquid name="Noah Goodman" affiliation="Stanford University" url="https://cocolab.stanford.edu/ndg" img="assets/img/speakers/2023/NoahGoodman.jpg" %}
+      {% include speakers.liquid name="Jan Kirchner" affiliation="OpenAI" url="https://www.researchgate.net/profile/Jan-Kirchner-2" img="assets/img/speakers/2023/JanKirchner.jpeg" %}
+      {% include speakers.liquid name="Andrew Lampinen" affiliation="Google DeepMind" url="https://lampinen.github.io" img="assets/img/speakers/2023/AndrewLampinen.jpg" %}
+      {% include speakers.liquid name="Nicole Ludwig" affiliation="University of Tübingen" url="https://www.mlsustainableenergy.com/people/nicole-ludwig" img="assets/img/speakers/2023/NicoleLudwig.jpg" %}
+      {% include speakers.liquid name="John Jairo Madrid Carvajal" affiliation="Osnabrück University" url="https://situated-cognition.com/members/john-jairo-madrid-carvajal" img="assets/img/speakers/2023/JohnMadrid.jpg" %}
+      </div>
+  </div>
+</div>
+
+
+### Panelists
+
+<div class="projects">
+  <div class="container">
+      <div class="row row-cols-2 projects pt-3 pb-3">
+      {% include people_horizontal.liquid name="Rebecca Beiter" affiliation="Cyber Valley" url="https://cyber-valley.de/de/people/rbeiter" img="assets/img/panelists/2023/RebeccaBeiter.jpg" %}
+      {% include people_horizontal.liquid name="Annette Leßmöllmann" affiliation="Karlsruhe Institute of Technology" url="https://www.wissenschaftskommunikation.de/author/annettelessmoellmann" img="assets/img/panelists/2023/AnnetteLessmoellmann.jpeg" %}
+      {% include people_horizontal.liquid name="Kristof Meding" affiliation="LfDI Baden-Württemberg" url="https://www.baden-wuerttemberg.datenschutz.de" img="assets/img/panelists/2023/KristofMeding.jpg" %}
+      {% include people_horizontal.liquid name="Nora Freya Lindemann" affiliation="Osnabrück University" url="https://www.researchgate.net/profile/Nora-Lindemann" img="assets/img/panelists/2023/NoraLindemann.jpg" %}
+      {% include people_horizontal.liquid name="Eric Schulz" affiliation="Max Planck Institute for Biological Cybernetics" url="https://www.kyb.tuebingen.mpg.de/person/103915" img="assets/img/panelists/2023/EricSchulz.jpg" %}
+      </div>
+  </div>
+</div>
+
+
+### Materials
+
+* Monday  
+    - Peter Dayan's [slides](/assets/pdf/dayan_risk.pdf)  
+    - [Link](https://github.com/JohnMadrid/IICCSSS-workshop) to the GitHub repository for John Madrid's workshop (13:30–15:00)   
+* Tuesday   
+    - Marc Himmelbach's introduction to [studying at the Graduate Training Center for Neuroscience](/assets/pdf/Marc_Himmelbach_Studying_at_the_GTC_IICCSSS_2023.pdf)
+    - [Materials](https://colab.research.google.com/drive/1mFE-UijB18O72RqQgjarryb7accvbRtJ?usp=sharing) for the Workshop on Forecasting for Sustainable Energy Systems by Nicole Ludwig
+* Wednesday   
+    - [Link](https://github.com/marcelbinz/GPTs-and-how-to-prompt-them/tree/main) to the GitHub repository for Marcel Binz's workshop (9:30–11:00)   
+
+
+### Abstract book
+
+[Contributed talks](/assets/pdf/2023-abstract-book.pdf)
+
+
