Switch to horizontal layout for speakers

--- a/_pages/2023.md
+++ b/_pages/2023.md
@@ -18,16 +18,16 @@ nav: false
 
 <div class="projects">
   <div class="container">
-      <div class="row row-cols-1 row-cols-md-4">
-      {% include speakers.liquid name="Marcel Binz" affiliation="MPI for Biological Cybernetics" url="https://marcelbinz.github.io" img="assets/img/speakers/2023/MarcelBinz.jpg" %}
-      {% include speakers.liquid name="Peter Dayan" affiliation="MPI for Biological Cybernetics" url="https://www.mpg.de/12309370/biological-cybernetics-dayan" img="assets/img/speakers/2023/PeterDayan.jpg" %}
-      {% include speakers.liquid name="Maria Eckstein" affiliation="Google DeepMind" url="https://mariaeckstein.com" img="assets/img/speakers/2023/MariaEckstein.jpg" %}
-      {% include speakers.liquid name="Jennifer Hu" affiliation="MIT" url="https://jennhu.github.io" img="assets/img/speakers/2023/JenniferHu.jpg" %}
-      {% include speakers.liquid name="Noah Goodman" affiliation="Stanford University" url="https://cocolab.stanford.edu/ndg" img="assets/img/speakers/2023/NoahGoodman.jpg" %}
-      {% include speakers.liquid name="Jan Kirchner" affiliation="OpenAI" url="https://www.researchgate.net/profile/Jan-Kirchner-2" img="assets/img/speakers/2023/JanKirchner.jpeg" %}
-      {% include speakers.liquid name="Andrew Lampinen" affiliation="Google DeepMind" url="https://lampinen.github.io" img="assets/img/speakers/2023/AndrewLampinen.jpg" %}
-      {% include speakers.liquid name="Nicole Ludwig" affiliation="University of Tübingen" url="https://www.mlsustainableenergy.com/people/nicole-ludwig" img="assets/img/speakers/2023/NicoleLudwig.jpg" %}
-      {% include speakers.liquid name="John Jairo Madrid Carvajal" affiliation="Osnabrück University" url="https://situated-cognition.com/members/john-jairo-madrid-carvajal" img="assets/img/speakers/2023/JohnMadrid.jpg" %}
+      <div class="row row-cols-2 projects pt-3 pb-3">
+      {% include people_horizontal.liquid name="Marcel Binz" affiliation="MPI for Biological Cybernetics" url="https://marcelbinz.github.io" img="assets/img/speakers/2023/MarcelBinz.jpg" %}
+      {% include people_horizontal.liquid name="Peter Dayan" affiliation="MPI for Biological Cybernetics" url="https://www.mpg.de/12309370/biological-cybernetics-dayan" img="assets/img/speakers/2023/PeterDayan.jpg" %}
+      {% include people_horizontal.liquid name="Maria Eckstein" affiliation="Google DeepMind" url="https://mariaeckstein.com" img="assets/img/speakers/2023/MariaEckstein.jpg" %}
+      {% include people_horizontal.liquid name="Jennifer Hu" affiliation="MIT" url="https://jennhu.github.io" img="assets/img/speakers/2023/JenniferHu.jpg" %}
+      {% include people_horizontal.liquid name="Noah Goodman" affiliation="Stanford University" url="https://cocolab.stanford.edu/ndg" img="assets/img/speakers/2023/NoahGoodman.jpg" %}
+      {% include people_horizontal.liquid name="Jan Kirchner" affiliation="OpenAI" url="https://www.researchgate.net/profile/Jan-Kirchner-2" img="assets/img/speakers/2023/JanKirchner.jpeg" %}
+      {% include people_horizontal.liquid name="Andrew Lampinen" affiliation="Google DeepMind" url="https://lampinen.github.io" img="assets/img/speakers/2023/AndrewLampinen.jpg" %}
+      {% include people_horizontal.liquid name="Nicole Ludwig" affiliation="University of Tübingen" url="https://www.mlsustainableenergy.com/people/nicole-ludwig" img="assets/img/speakers/2023/NicoleLudwig.jpg" %}
+      {% include people_horizontal.liquid name="John Jairo Madrid Carvajal" affiliation="Osnabrück University" url="https://situated-cognition.com/members/john-jairo-madrid-carvajal" img="assets/img/speakers/2023/JohnMadrid.jpg" %}
       </div>
   </div>
 </div>
