--- a/_pages/2023.md
+++ b/_pages/2023.md
@@ -57,7 +57,12 @@ nav: false
     - Marc Himmelbach's introduction to [studying at the Graduate Training Center for Neuroscience](/assets/pdf/Marc_Himmelbach_Studying_at_the_GTC_IICCSSS_2023.pdf)
     - [Materials](https://colab.research.google.com/drive/1mFE-UijB18O72RqQgjarryb7accvbRtJ?usp=sharing) for the Workshop on Forecasting for Sustainable Energy Systems by Nicole Ludwig
 * Wednesday   
-    - [Link](https://github.com/marcelbinz/GPTs-and-how-to-prompt-them/tree/main) to the GitHub repository for Marcel Binz's workshop (9:30–11:00)   
+    - [Link](https://github.com/marcelbinz/GPTs-and-how-to-prompt-them/tree/main) to the GitHub repository for Marcel Binz's workshop (9:30–11:00)  
+
+
+### Contributed talks
+
+Two contributed talk sessions took place on [Tuesday, September 12](/2023/contributed-talks-I/) and [Wednesday, September 13](/2023/contributed-talks-II/).
 
 
 ### Abstract book
