--- a/_pages/2024.md
+++ b/_pages/2024.md
@@ -21,11 +21,11 @@ nav: false
       {% include people.liquid name="Jannis Born" affiliation="IBM Research Europe" url="https://research.ibm.com/people/jannis-born" img="assets/img/organisers/jannisborn.jpg" %}
       {% include people.liquid name="Tim Kietzmann" affiliation="University of Osnabrück" url="https://kietzmannlab.org" img="assets/img/speakers/2024/TimKietzmann.jpg" %}
       {% include people.liquid name="Johannes Mehrer" affiliation="EPFL" url="https://people.epfl.ch/johannes.mehrer?lang=en" img="assets/img/speakers/2024/JohannesMehrer.jpg" %}
-      {% include people.liquid name="Kevin J. Miller" affiliation="Google DeepMind" url="https://kevinjmiller.org" %}
+      {% include people.liquid name="Kevin J. Miller" affiliation="Google DeepMind" url="https://kevinjmiller.org" img="assets/img/speakers/2024/KevinMiller.png" %}
       {% include people.liquid name="Sebastian Musslick" affiliation="University of Osnabrück" url="https://smusslick.com" img="assets/img/speakers/2024/SebastianMusslick.jpg" %}
       {% include people.liquid name="Tanja Schultz" affiliation="University of Bremen" url="https://www.uni-bremen.de/csl/institut/direktorin" img="assets/img/speakers/2024/TanjaSchultz.jpg" photo_credit="Photo by Jens Lehmkühler" %}
       {% include people.liquid name="Lisa-Marie Vortmann" affiliation="University of Groningen" url="https://lisamarievortmann.com" img="assets/img/speakers/2024/LisaMarieVortmann.jpg" %}
-      {% include people.liquid name="Josefine Zerbe" affiliation="MPI for Human Cognitive and Brain Sciences" url="https://www.cbs.mpg.de/person/127736/1483114" %}
+      {% include people.liquid name="Katja Seeliger" affiliation="MPI for Human Cognitive and Brain Sciences" url="seelikat.github.io" img="assets/img/speakers/2024/KatjaSeeliger.jpg" %}
       </div>
   </div>
 </div>
