format with prettier

--- a/_pages/2023.md
+++ b/_pages/2023.md
@@ -6,13 +6,11 @@ description: The fourth IICCSSS, just like the one in 2022, was held for an enti
 nav: false
 ---
 
-
 **Location:** In-person event at the University of Tübingen  
 **Date:** September 11–15, 2023  
 **Attendees:** Over 60 attendees  
 **ECTS:** 2  
 **Format:** Lectures, lightning talks, hackathon, and a panel discussion
-
 
 ### Speakers
 
@@ -32,7 +30,6 @@ nav: false
   </div>
 </div>
 
-
 ### Panelists
 
 <div class="projects">
@@ -47,26 +44,21 @@ nav: false
   </div>
 </div>
 
-
 ### Materials
 
-* Monday  
-    - Peter Dayan's [slides](/assets/pdf/dayan_risk.pdf)  
-    - [Link](https://github.com/JohnMadrid/IICCSSS-workshop) to the GitHub repository for John Madrid's workshop (13:30–15:00)   
-* Tuesday   
-    - Marc Himmelbach's introduction to [studying at the Graduate Training Center for Neuroscience](/assets/pdf/Marc_Himmelbach_Studying_at_the_GTC_IICCSSS_2023.pdf)
-    - [Materials](https://colab.research.google.com/drive/1mFE-UijB18O72RqQgjarryb7accvbRtJ?usp=sharing) for the Workshop on Forecasting for Sustainable Energy Systems by Nicole Ludwig
-* Wednesday   
-    - [Link](https://github.com/marcelbinz/GPTs-and-how-to-prompt-them/tree/main) to the GitHub repository for Marcel Binz's workshop (9:30–11:00)  
-
+- Monday
+  - Peter Dayan's [slides](/assets/pdf/dayan_risk.pdf)
+  - [Link](https://github.com/JohnMadrid/IICCSSS-workshop) to the GitHub repository for John Madrid's workshop (13:30–15:00)
+- Tuesday
+  - Marc Himmelbach's introduction to [studying at the Graduate Training Center for Neuroscience](/assets/pdf/Marc_Himmelbach_Studying_at_the_GTC_IICCSSS_2023.pdf)
+  - [Materials](https://colab.research.google.com/drive/1mFE-UijB18O72RqQgjarryb7accvbRtJ?usp=sharing) for the Workshop on Forecasting for Sustainable Energy Systems by Nicole Ludwig
+- Wednesday
+  - [Link](https://github.com/marcelbinz/GPTs-and-how-to-prompt-them/tree/main) to the GitHub repository for Marcel Binz's workshop (9:30–11:00)
 
 ### Contributed talks
 
 Two contributed talk sessions took place on [Tuesday, September 12](/2023/contributed-talks-I/) and [Wednesday, September 13](/2023/contributed-talks-II/).
 
-
 ### Abstract book
 
 [Contributed talks](/assets/pdf/2023-abstract-book.pdf)
-
-
