change navbar layout type to prevent broken link

--- a/_pages/2023.md
+++ b/_pages/2023.md
@@ -42,7 +42,7 @@ nav: false
       {% include people_horizontal.liquid name="Annette Leßmöllmann" affiliation="Karlsruhe Institute of Technology" url="https://www.wissenschaftskommunikation.de/author/annettelessmoellmann" img="assets/img/panelists/2023/AnnetteLessmoellmann.jpeg" %}
       {% include people_horizontal.liquid name="Nora Freya Lindemann" affiliation="Osnabrück University" url="https://www.researchgate.net/profile/Nora-Lindemann" img="assets/img/panelists/2023/NoraLindemann.jpg" %}
       {% include people_horizontal.liquid name="Kristof Meding" affiliation="LfDI Baden-Württemberg" url="https://www.baden-wuerttemberg.datenschutz.de" img="assets/img/panelists/2023/KristofMeding.jpg" %}
-      {% include people_horizontal.liquid name="Eric Schulz" affiliation="Max Planck Institute for Biological Cybernetics" url="https://www.kyb.tuebingen.mpg.de/person/103915" img="assets/img/panelists/2023/EricSchulz.jpg" %}
+      {% include people_horizontal.liquid name="Eric Schulz" affiliation="Max Planck Institute for Biological Cybernetics" url="https://scholar.google.de/citations?user=74Cj5GYAAAAJ&hl=en" img="assets/img/panelists/2023/EricSchulz.jpg" %}
       </div>
   </div>
 </div>
