--- a/_pages/2019.md
+++ b/_pages/2019.md
@@ -14,6 +14,12 @@ The inaugural IICCSSS took place in 2019 in Freiburg, Germany 😊
 **ECTS:** 2  
 **Format:** Lectures, workshops, contributed (blitz) talks, hackathon
 
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/participants-2019.png" title="Our 2019 participants" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
 **Topics:**
 
 - _Bayesian Models of Cognition_ 🧠
