--- a/_pages/2022.md
+++ b/_pages/2022.md
@@ -14,6 +14,12 @@ The third IICCSSS was successfully held for an entire week in 2022 in Tübingen,
 **ECTS:** 2  
 **Format:** Lectures, blitz talks, and a panel discussion 📚
 
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/participants-2022.jpg" title="Our 2022 participants" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
 **Topics:**
 
 - _Decision Making_ 🤔
