--- a/_pages/2023.md
+++ b/_pages/2023.md
@@ -12,6 +12,12 @@ nav: false
 **ECTS:** 2  
 **Format:** Lectures, lightning talks, hackathon, and a panel discussion
 
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/participants-2023.jpg" title="Our 2023 participants" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
 ### Speakers
 
 <div class="projects">
