--- a/_pages/2024.md
+++ b/_pages/2024.md
@@ -11,6 +11,12 @@ nav: false
 **Attendees:** Over 50 attendees  
 **Format:** Lectures, lightning talks, hackathon, institute tour, and a panel discussion
 
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/participants-2024.jpg" title="Our 2024 participants" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+
 ### Speakers
 
 <div class="projects">
